--- a/src/main/resources/templates/web/usercenter/my_question_list.html
+++ b/src/main/resources/templates/web/usercenter/my_question_list.html
@@ -32,89 +32,74 @@
                                 </section>
                                 <!-- /无数据提示 结束-->
 
-                                <c:if test="${not empty questionsList }">
-                                    <div class="u-question-wrap">
-                                        <section class="q-all-list">
-                                            <ul>
-                                                <c:forEach items="${questionsList }" var="question">
-                                                    <li>
-                                                        <aside class="q-head-pic">
-                                                            <c:choose>
-                                                                <c:when test="${not empty question.picImg }">
-                                                                    <img src="<%=staticImage %>${question.picImg }" alt="">
-                                                                </c:when>
-                                                                <c:otherwise>
-                                                                    <img src="${ctx }/static/inxweb/img/avatar-boy.gif" alt="">
-                                                                </c:otherwise>
-                                                            </c:choose>
-                                                            <p class="hLh30 txtOf">
-													<span class="c-999"> <c:if test="${empty question.showName }">${question.email }</c:if> <c:if test="${not empty question.showName }">${question.showName }</c:if>
-													</span>
+                                <div class="u-question-wrap" th:if="${questionsList ne null}">
+                                    <section class="q-all-list">
+                                        <ul>
+                                            <li th:each="question:${questionsList}">
+                                                <aside class="q-head-pic">
+                                                    <img th:if="${question.picImg ne null}" th:src="${question.picImg }" alt="">
+                                                    <img th:if="${question.picImg eq null}" src="/web/img/avatar-boy.gif" alt="">
+                                                    <p class="hLh30 txtOf">
+                                                        <span class="c-999" th:if="${question.showName eq null}" th:text="${question.email }"></span>
+                                                        <span class="c-999" th:unless="${question.showName eq null}" th:text="${question.showName }"></span>
+                                                    </p>
+                                                </aside>
+                                                <section class="q-txt-box">
+                                                    <a class="replyBrowseNum" th:href="'/questions/info/'+${question.id }" title="">
+                                                        <div class="replyNum">
+                                                            <span class="r-b-num" th:text="${question.replyCount }"></span>
+                                                            <p class="hLh30">
+                                                                <span class="c-999 f-fA">回答数</span>
                                                             </p>
-                                                        </aside>
-                                                        <section class="q-txt-box">
-                                                            <a class="replyBrowseNum" href="${ctx }/questions/info/${question.id }" title="">
-                                                                <div class="replyNum">
-                                                                    <span class="r-b-num">${question.replyCount }</span>
-                                                                    <p class="hLh30">
-                                                                        <span class="c-999 f-fA">回答数</span>
-                                                                    </p>
-                                                                </div>
-                                                                <div class="browseNum">
-                                                                    <span class="r-b-num">${question.browseCount }</span>
-                                                                    <p class="hLh30">
-                                                                        <span class="c-999 f-fA">浏览数</span>
-                                                                    </p>
-                                                                </div>
-                                                            </a>
-                                                            <h3 class="hLh30 txtOf">
-                                                                <em class="icon16 q-tw">&nbsp;</em>
-                                                                <a href="${ctx }/questions/info/${question.id }" title="" class="fsize16 c-333 vam">${question.title }</a>
-                                                            </h3>
-                                                            <h3 class="hLh30 txtOf mt5">
-                                                                <em class="icon16 q-hd">&nbsp;</em>
-                                                                <c:if test="${empty question.questionsCommentList }">
-                                                                    <span class="fsize12 c-999 vam">哈~~~ 此问题大家还有苦思冥想中...</span>
-                                                                    <!-- 没有回答时的内容 -->
-                                                                </c:if>
-                                                                <c:if test="${not empty question.questionsCommentList }">
-                                                                    <c:if test="${question.status==0 }">
-															<span class="fsize12 c-999 vam"> <tt class="c-ccc f-fM mr5">[最新回答]</tt>
-																	<c:forEach items="${question.questionsCommentList }" var="questionsComment">
-																		<c:out value="${questionsComment.content }"></c:out>
-																	</c:forEach>
-															</span>
-                                                                        <!-- 有回答时显示最新一条的回答内容 -->
-                                                                    </c:if>
+                                                        </div>
+                                                        <div class="browseNum">
+                                                            <span class="r-b-num" th:text="${question.browseCount}"></span>
+                                                            <p class="hLh30">
+                                                                <span class="c-999 f-fA">浏览数</span>
+                                                            </p>
+                                                        </div>
+                                                    </a>
+                                                    <h3 class="hLh30 txtOf">
+                                                        <em class="icon16 q-tw">&nbsp;</em>
+                                                        <a th:href="'/questions/info/'+${question.id}" title="" class="fsize16 c-333 vam" th:text="${question.title }"></a>
+                                                    </h3>
+                                                    <h3 class="hLh30 txtOf mt5">
+                                                        <em class="icon16 q-hd">&nbsp;</em>
+                                                        <span class="fsize12 c-999 vam" th:if="${question.questionsCommentList eq null}">哈~~~ 此问题大家还有苦思冥想中...</span>
+                                                        <!-- 没有回答时的内容 -->
 
-                                                                    <c:if test="${question.status==1 }">
-															<span class="fsize12 c-999 vam"> <tt class="c-green f-fM mr5">[最佳回答]</tt>
-																	<c:forEach items="${question.questionsCommentList }" var="questionsComment">
-																		<c:out value="${questionsComment.content }"></c:out>
-																	</c:forEach>
-															</span>
-                                                                        <!-- 采纳最佳显示最佳答案内容 -->
-                                                                    </c:if>
-                                                                </c:if>
-                                                            </h3>
-                                                            <div class="mt15">
-                                                                <span class="c-ccc fl vam">时间：${question.modelTime }</span>
-                                                                <section class="fl ml20 pt10">
-                                                                    <div class="taglist clearfix">
-                                                                        <c:forEach items="${question.questionsTagRelationList }" var="questionsTag">
-                                                                            <a title="${questionsTag.tagName }" data-id="${questionsTag.questionsTagId }" class="list-tag" href="${ctx}/questions/list?questions.questionsTagId=${questionsTag.questionsTagId }">${questionsTag.tagName }</a>
-                                                                        </c:forEach>
-                                                                    </div>
-                                                                </section>
-                                                                <div class="clear"></div>
+                                                        <c:if test="${not empty question.questionsCommentList }">
+                                                        <c:if test="${question.status==0 }">
+                                                        <th:block th:if="${question.questionsCommentList ne null}">
+                                                            <!-- 有回答时显示最新一条的回答内容 -->
+                                                            <span class="fsize12 c-999 vam" th:if="${question.status==0}"> <tt class="c-ccc f-fM mr5">[最新回答]</tt>
+                                                                <th:block th:each="questionsComment:${question.questionsCommentList}">
+                                                                    <span th:text="${questionsComment.content}"></span>
+                                                                </th:block>
+                                                             </span>
+                                                            <!-- 采纳最佳显示最佳答案内容 -->
+                                                            <span class="fsize12 c-999 vam" th:if="${question.status==1}"> <tt class="c-green f-fM mr5">[最佳回答]</tt>
+                                                                 <th:block th:each="questionsComment:${question.questionsCommentList}">
+                                                                    <span th:text="${questionsComment.content}"></span>
+                                                                </th:block>
+                                                            </span>
+                                                        </th:block>
+                                                    </h3>
+                                                    <div class="mt15">
+                                                        <span class="c-ccc fl vam" th:text="'时间：'+${question.modelTime}"</span>
+                                                        <section class="fl ml20 pt10">
+                                                            <div class="taglist clearfix" th:each="questionsTag:${question.questionsTagRelationList}">
+                                                                <a th:title="${questionsTag.tagName }" th:data-id="${questionsTag.questionsTagId }" class="list-tag"
+                                                                   th:href="'/questions/list?questions.questionsTagId='+${questionsTag.questionsTagId }" th:text="${questionsTag.tagName }"></a>
                                                             </div>
                                                         </section>
-                                                    </li>
-                                                </c:forEach>
-                                            </ul>
-                                        </section>
-                                    </div>
-                                </c:if>
+                                                        <div class="clear"></div>
+                                                    </div>
+                                                </section>
+                                            </li>
+                                        </ul>
+                                    </section>
+                                </div>
                                 <!-- 公共分页 开始 -->
                                 <jsp:include page="/WEB-INF/view/common/front_page.jsp" />
                                 <!-- 公共分页 结束 -->
